Agregando componentes extra, aun hay pendientes por crear

--- a/src/app/componentes/shared/navbar/navbar.component.html
+++ b/src/app/componentes/shared/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 
         <nav class="docs-sidebar" data-spy="affix" data-offset-top="300" data-offset-bottom="200" role="navigation">
             <ul class="nav">
-                <li><a [routerLink]="['/home']">Getting Started</a></li>
-                <li><a [routerLink]="['/install']">How to Install WordPress</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['/start']">Getting Started</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['/install']">How to Install WordPress</a></li>
                 <li><a href="#line3">How to Install Theme</a></li>
                 <li><a href="#line4">Necessary Plugins</a></li>
                 <li><a href="#line5">Creating Blog Pages</a></li>
