--- a/src/app/componentes/install/install.component.html
+++ b/src/app/componentes/install/install.component.html
@@ -1,62 +1,1 @@
-
-
-    <div class="row">
-        <div class="col-md-12 left-align">
-            <h2 class="dark-text">Getting Started   <hr></h2>
-        </div>
-        <!-- end col -->
-    </div>
-    <!-- end row -->
-
-    <div class="row">
-        <div class="col-md-12">
-            <p>Lorem the It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-
-            <h4>Bootstrap Grid System</h4>
-
-            <div highlight="all">
-                <pre>
-                    <code [textContent]="code">
-                        
-                    </code>
-                </pre>
-            </div>
-            
-
-            <p>Our you can use the grid system with 2 columns like this;</p>
-
-            <pre class="brush: html">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            YOUR CODES GOES HERE
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            YOUR CODES GOES HERE
-                        </div>
-                    </div>
-                </div>
-            </pre>
-
-            <p>Our you can use the grid system with 3 columns like this;</p>
-
-            <pre class="brush: html">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            YOUR CODES GOES HERE
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            YOUR CODES GOES HERE
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            YOUR CODES GOES HERE
-                        </div>
-                    </div>
-                </div>
-            </pre>
-        </div>
-        <!-- end col -->
-    </div>
-    <!-- end row -->
-
+<p>Install component</p>
