--- a/src/app/componentes/shared/docs-heading/docs-heading.component.html
+++ b/src/app/componentes/shared/docs-heading/docs-heading.component.html
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="col-md-12">
             <div class="big-title text-center">
-                <h1>Your ThemeForest item Name</h1>
-                <p class="lead">Your awesome theme / template documentation version 1.0</p>
+                <h1><a [routerLink]="['welcome']">Mt2Web.py Documentacion </a></h1>
+                <p class="lead">Aprende a usar este CMS para los PServer de Mt2</p>
             </div>
             <!-- end title -->
         </div>
